Fixed spacing

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -140,7 +140,7 @@ table {
   overflow-y: auto;
 
   @media (max-width: 575px){
-    height: calc(100dvh - 450px);
+    height: calc(100dvh - 420px);
   }
 }
 
